Toggler issue fixed, contact us section updated but except Google Maps address for business. Alignment of bout us section done but not completed

--- a/myStyle.css
+++ b/myStyle.css
@@ -9,9 +9,13 @@ html,body{
 	font-size: 1.2em;
 }
 
-.navbar-brand{
-	min-height: 55px;
-	padding: 0 15px 5px;
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px;
+  width: auto;
 }
 
 .navbar-default .navbar-nav li a{
